<resources>
    <string name="app_name">Color Clicker</string>
    <string name="begin">Click a color to begin!</string>
    <string name="default_timer">Timer&#8230;</string>
    <string name="timer_timesup">Times up!</string>
    <string name="welcome_text">Welcome to Color Clicker!</string>
    <string name="left_pregame">Click either!</string>
    <string name="right_pregame">Click either!</string>
    <string name="press_to_start">Press to start!</string>
    <string name="press_to_restart">Press to restart!</string>
    <string name="press_again_to_restart">Press again to restart!</string>
    <string name="game_lost_generic">You lose!</string>
    <string name="game_lost_because_wrong">Wrong!</string>
    <string name="game_lost_because_time">Time\'s up!</string>
    <string name="play_button">Play Game</string>
    <string name="settings_button">Settings</string>
    <string name="high_scores_button">High Scores</string>
    <string name="confirm_button">Confirm</string>
    <string name="nickname_edittext_hint">Enter your nickname</string>
    <string name="toggle_local">Local scores</string>
    <string name="toggle_global">Global scores</string>
    <string name="toggle_soundOn">Sound on</string>
    <string name="toggle_soundOff">Sound off</string>
    <string name="dangerzone">Warning - Danger Zone</string>
    <string name="are_you_sure">Are you sure? (Press to delete)</string>
    <string name="button_deleteContent">Erase High Scores</string>
    <string name="listview_label_user">Nickname</string>
    <string name="listview_label_score">Score</string>
    <string name="button_colorChooser">Pick Colors</string>
    <string name="checkbox_enableColor">Enable color</string>
    <string name="textview_colorChooserTitle">Color Chooser</string>
    <string name="button_stats">Statistics</string>
    <string name="defaultmTextViewTotalClickedGood">Total clicked correctly: </string>
    <string name="defaultmTextViewTotalClickedBad">Total clicked incorrectly: </string>
    <string name="defaultmTextViewRed">Red: </string>
    <string name="defaultmTextViewBlue">Blue: </string>
    <string name="defaultmTextViewGreen">Green: </string>
    <string name="defaultmTextViewOrange">Orange: </string>
    <string name="defaultmTextViewYellow">Yellow: </string>
    <string name="defaultmTextViewPink">Pink: </string>
    <string name="defaultmTextViewPurple">Purple: </string>
    <string name="defaultmTextViewWhite">White: </string>
    <string name="defaultmTextViewNickname">Current nickname: </string>
    <string name="defaultmTextViewCurrentPoints">Current points: </string>
    <string name="defaultmTextViewTotalPointsSpent">Total points spent: </string>
    <string name="defaultmTextViewNewColorsBought">Number of new colors bought: </string>
    <string name="textview_statTotalColorClickedLabel">Number Clicked Per Color </string>
    <string name="textview_statGeneralStats">General Stats </string>
    <string name="textview_statMiscStats">Misc. Stats </string>
    <string name="vibrate_on">Vibration On</string>
    <string name="vibrate_off">Vibration Off</string>
    <string name="help_button">\?</string>
    <string name="textview_gamemodeSelectorTitle">Select the Game Mode</string>
    <string name="info">Info</string>
    <string name="gamemodeSprint">Sprint</string>
    <string name="gamemodeStandard">Standard</string>
    <string name="gamemodeReverse">Reverse</string>
    <string name="sharedPreferences_nickname">nickname</string>
    <string name="sharedPreferences_firstTime">firstTime</string>
    <string name="sharedPreferences_uniqueId">uniqueId</string>
    <string name="sharedPreferences_initialLaunch">initialLaunch</string>
    <string name="delete_content_warning">Warning: deleting your high scores is permanent and
        cannot be reversed. Make sure that you actually want to delete them before pressing
        that button right there. There is nothing the developer or anybody else in the entire
        world can do to get your precious, hard-earned high scores back after you delete them.</string>

</resources>
