<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundStandard">

    <TextView
        android:id="@+id/textview_titleTextMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/settings_button"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/edittext_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:hint="@string/nickname_edittext_hint"
            android:textColorHint="@android:color/white"
            android:maxLength="16"/>

        <Button
            android:id="@+id/button_confirmNickname"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:text="@string/confirm_button"
            android:textColor="@drawable/button_text_color"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textview_currentNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/primary_text_dark"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center_horizontal">

        <ToggleButton
            android:id="@+id/togglebutton_sound"
            android:textOn="@string/toggle_soundOn"
            android:textOff="@string/toggle_soundOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>

        <ToggleButton
            android:id="@+id/togglebutton_vibrate"
            android:textOn="@string/vibrate_on"
            android:textOff="@string/vibrate_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_pickerColors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_colorChooser"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <View
            android:layout_width="110dp"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="7dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dangerzone"
            android:textColor="@android:color/white"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            style="@style/TextShadow"
            android:textSize="12sp"/>

        <View
            android:layout_width="110dp"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="7dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textview_deleteContentWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_content_warning"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginTop="25dp" />

    <Button
        android:id="@+id/button_delete_local_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_deleteContent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/button_settingsHelp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:elevation="4dp"
        android:layout_gravity="end"
        android:textStyle="bold"
        android:textSize="36sp"
        android:text="@string/help_button"
        android:background="@drawable/round_button"/>

</LinearLayout>