<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundMain"
    android:weightSum="6">

    <TextView
        android:id="@+id/textview_titleTextMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="58sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/button_play"
        style="@style/GeneralButtonStyle"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/play_button"
        android:textSize="36sp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button_scores"
        style="@style/GeneralButtonStyle"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/high_scores_button"
        android:textSize="36sp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button_settings"
        style="@style/GeneralButtonStyle"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/settings_button"
        android:textSize="36sp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button_stats"
        style="@style/GeneralButtonStyle"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_stats"
        android:textSize="36sp"
        android:layout_weight="1"/>

</LinearLayout>